--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,7 @@
-@import './common';
-@import './example';
+@import "./variables";
+@import "./common";
+@import "./wrapper";
+@import "./container";
+@import "./header";
+@import "./theme";
+@import "./hero";
