--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,9 @@
 :root {
     --accent-color: #ca3aff;
+
+    --bgd-light-theme: rgb(254, 255, 235);
+    --text-light-theme: rgb(0, 0, 0);
+
+    --bgd-dark-theme: rgb(94, 40, 20);
+    --text-dark-theme: rgb(255, 255, 255);
 }
