--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 @import "./common";
+
 @import "./wrapper";
-@import "./container";
-@import "./header";
+
 @import "./theme";
-@import "./hero";
+@import "./wheel";
