--- a/src/sass/_wrapper.scss
+++ b/src/sass/_wrapper.scss
@@ -1,7 +1,11 @@
 .wrapper {
-    min-height: 100vh;
+    max-width: 100%;
+
+    height: 100%;
+
+    padding: 30px;
+
     display: flex;
     flex-direction: column;
-
-    position: relative;
+    align-items: center;
 }
