--- a/src/partials/change-theme.html
+++ b/src/partials/change-theme.html
@@ -1,5 +1,5 @@
 <div class="theme-container">
-  <p>CHANGE THEME ===></p>
+  <p class="arrow">CHANGE THEME</p>
   <!-- Кнопка зміни теми -->
   <div class="theme">
     <button type="button" class="theme__on"></button>
